--- a/style.css
+++ b/style.css
@@ -1,74 +1,111 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #cccc;
-}
-
-h1 {
-    background-color: #0083C3;
-}
-
-h2 {
-    font-size: 48px;
-    color: #2E2E2E;
-    text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-    line-height: 58px;
-    padding: 2rem;
-}
-
-h3 {
-    font-size: 24px;
-    line-height: 29px;
-    color: #2E2E2E;
-    padding: 30px;
-}
-
-section {
-    padding: 30px;
-    margin: 0;
-    background-color: #FFFFFF;
-    border-radius: 10px;
-}
-
-form {
-    padding: 20px;
-}
-
-form>ul {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-li {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-}
-
-label {
-    padding: 5px;
-}
-
-input,
-select {
-    background: #F3F3F3;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 5px;
-}
-
-.button-add {
-    background-color: #0083C3;
-    color: #FFFFFF;
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 17px;
-    cursor: pointer;
-    padding-block-start: 0.5rem;
-    padding-block-end: 0.5rem;
-    padding-inline-start: 1.5rem;
-    padding-inline-end: 1.5rem;
-    border-radius: 5px;
-    margin-block-start: 2rem;
-}
+    body {
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: #cccc;
+    }
+    
+    h1 {
+        background-color: #0083C3;
+    }
+    
+    h2 {
+        font-size: 48px;
+        color: #2E2E2E;
+        text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+        line-height: 58px;
+        padding: 2rem;
+    }
+    
+    h3 {
+        font-size: 24px;
+        line-height: 29px;
+        color: #2E2E2E;
+        padding: 30px;
+    }
+    
+    section {
+        padding: 30px;
+        margin: 0;
+        background-color: #FFFFFF;
+        border-radius: 10px;
+    }
+    
+    form {
+        padding: 20px;
+    }
+    
+    form>ul {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    
+    li {
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    label {
+        padding: 5px;
+    }
+    
+    input,
+    select {
+        background: #F3F3F3;
+        border-radius: 5px;
+        padding: 10px;
+        margin: 5px;
+    }
+    
+    .button-add {
+        background-color: #0083C3;
+        color: #FFFFFF;
+        text-transform: uppercase;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 17px;
+        cursor: pointer;
+        padding-block-start: 0.5rem;
+        padding-block-end: 0.5rem;
+        padding-inline-start: 1.5rem;
+        padding-inline-end: 1.5rem;
+        border-radius: 5px;
+        margin-block-start: 2rem;
+    }
+    
+    th[scope="col"] {
+        color: #747474;
+    }
+    
+    table {
+        border-collapse: collapse;
+        letter-spacing: 1px;
+        font-size: .8rem;
+        border: 1px solid black;
+        width: 100%;
+        height: 100%;
+    }
+    
+    th {
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 17px;
+        letter-spacing: 0.11em;
+        text-transform: uppercase;
+        background-color: rgba(0, 127, 189, 0.03);
+        ;
+    }
+    
+    th,
+    td {
+        border: 1px solid black;
+        padding-block-start: 20px;
+        padding-block-end: 20px;
+        padding-inline-start: 50px;
+        padding-inline-end: 50px;
+    }
+    
+    th:nth-child(1) {
+        padding-inline-start: 100px;
+        padding-inline-end: 100px;
+    }
